--- a/index.html
+++ b/index.html
@@ -3,35 +3,89 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Where's my train?</title>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
     <link rel="stylesheet" type="text/css" href="main.css" />
     <script src="main.js"></script>
 </head>
 <body>
 
-    <!-- train tracker -->
-
-
-
-
-
+    <!-- train tracker  -->
+    <div class="container">
     <!-- jumbotron -->
+    <div class="jumbotron" style="background-color: black; color: white">
+              <h1 class="text-center">Train Schedual</h1>
+              <h3 class="text-center">This is a tracker that shows when your train will arrive.</p>
+        </div>
 
+        <div class="row">
 
-
+                <div class="col-lg-12">
 
     <!-- current trains -->
-
-
-
-
+    <div class="panel panel-primary">
+            <div class="panel-heading">
+              <h3 class="panel-title"><strong>Schedualed Trains</strong></h3>
+            </div>
+            <div class="panel-body">
+              <table class="table table-hover" id='train-table'>
+                <thead>
+                  <tr>
+                    <th>Train Name</th>
+                    <th>Destination</th>
+                    <th>Frequency (min)</th>
+                    <th>Next Arival</th>
+                    <th>Minutes Away</th>
+                   </tr>
+                </thead>
+                <tbody>
+                </tbody>
+              </table>
+            </div>
+          </div>
 
     <!-- add trains -->
+    <div class="panel panel-primary">
+            <div class="panel-heading">
+              <h3 class="panel-title"><strong>Add Trains</strong></h3>
+            </div>
+            <div class="panel-body">
 
+    <!-- forms -->
+    <form>
+            <div class="form-group">
+              <label for="train-name-input">Train Name</label>
+              <input class="form-control" id="train-name-input" type="text">
+            </div>
+            <div class="form-group">
+              <label for="destination-input">Destination</label>
+              <input class="form-control" id="destination-input" type="text">
+            </div>
+            <div class="form-group">
+              <label for="time-input">First Train Time (HH:mm - military time</label>
+              <input class="form-control" id="time-input" type="text">
+            </div>
+            <div class="form-group">
+              <label for="frequency-input">Frequency (min)</label>
+              <input class="form-control" id="frequency-input" type="text">
+            </div>
+            <button class="btn btn-primary" id="add-train-btn" type="submit">Submit</button>
+          </form>
 
+        </div>
 
+      </div>
 
-    
+    </div>
+
+  </div>
+
+</div>
+
     
 </body>
 </html>
