--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="main.css" />
-    <script src="main.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script> 
+
+    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+
 </head>
 <body>
 
@@ -86,6 +88,7 @@
 
 </div>
 
-    
+    <script src="assets/javascript/schedual.js"></script>
+
 </body>
 </html>
