--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <input class="form-control" id="destination-input" type="text">
             </div>
             <div class="form-group">
-              <label for="time-input">First Train Time (HH:mm - military time</label>
+              <label for="time-input">First Train Time (HH:mm - military time)</label>
               <input class="form-control" id="time-input" type="text">
             </div>
             <div class="form-group">
